--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         //  ⬇️ PEGA AQUÍ TU ENLACE DE GOOGLE SHEETS ⬇️
         // ==========================================
         
-        const GOOGLE_SHEET_LINK = 'PON_AQUI_TU_ENLACE_DE_GOOGLE_SHEETS'; 
+        const GOOGLE_SHEET_LINK = 'https://docs.google.com/spreadsheets/d/1BoK7B-otL3BVQ1BKQrzO6OGW4vUoGOBsjXdYgGJXqQY/edit?usp=sharing'; 
 
         // ==========================================
 
@@ -665,4 +665,5 @@
 
     </script>
 </body>
+
 </html>
