--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         // 🔴 CONFIGURACIÓN: PEGA TU ENLACE CSV AQUÍ
         // ==========================================
         const GOOGLE_SHEET_URL = ""; 
-        // Ejemplo: "https://docs.google.com/spreadsheets/d/e/.../pub?output=csv"
+        // Ejemplo: "https://docs.google.com/spreadsheets/d/1DToss1z9OR-S5FM1JORfXh71rJWzhAKAnQtJBFq5D3E/edit?usp=sharing"
 
         let products = [];
         let cart = {}; 
@@ -714,4 +714,5 @@
         }
     </script>
 </body>
+
 </html>
