--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         // ==========================================
         // 🔴 CONFIGURACIÓN: PEGA TU ENLACE CSV AQUÍ
         // ==========================================
-        const GOOGLE_SHEET_URL = ""; 
+        const GOOGLE_SHEET_URL = "https://docs.google.com/spreadsheets/d/1DToss1z9OR-S5FM1JORfXh71rJWzhAKAnQtJBFq5D3E/edit?usp=sharing"; 
         // Ejemplo: "https://docs.google.com/spreadsheets/d/1DToss1z9OR-S5FM1JORfXh71rJWzhAKAnQtJBFq5D3E/edit?usp=sharing"
 
         let products = [];
@@ -716,3 +716,4 @@
 </body>
 
 </html>
+
