--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         // ==========================================
         // 🔴 CONFIGURACIÓN: PEGA TU ENLACE CSV AQUÍ
         // ==========================================
-        const GOOGLE_SHEET_URL = ""; 
+        const GOOGLE_SHEET_URL = "https://docs.google.com/spreadsheets/d/1DToss1z9OR-S5FM1JORfXh71rJWzhAKAnQtJBFq5D3E/edit?usp=sharing"; 
         // Ejemplo: "https://docs.google.com/spreadsheets/d/e/.../pub?output=csv"
 
         // ==========================================
@@ -753,4 +753,5 @@ ID,Ignorar,Ignorar,Ignorar,Ignorar,Ignorar,Ignorar,Ignorar,Accesorios,Reloj Inte
         }
     </script>
 </body>
+
 </html>
