--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <script>
         // --- CONFIGURACIÓN & ESTADO ---
-        const CSV_URL = 'datos_tienda.csv'; 
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/1eAUSkwP1IqqTU8qyDpLHvFSGj3F9hu8bjj5nRfULk8U/edit?usp=sharing'; 
         
         let state = {
             products: [],
@@ -649,3 +649,4 @@
     </script>
 </body>
 </html>
+
